--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Políticas de privacidad!!";
+    ViewData["Title"] = "Políticas de privacidad!!??";
 }
 <h1>@ViewData["Title"]</h1>
 
