--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Políticas de privacidad!!??";
+    ViewData["Title"] = "Políticas de privacidad";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Use esta página para detallar las politicas de privacidad.</p>
