--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -36,7 +36,7 @@
                         <label asp-for="Password"></label>
                         <div class="input-group-append">
                             <input type="password" asp-for="Password" class="form-control" />
-                            <button id="boton-ojo" type="button"class=" btn btn-secondary">
+                            <button id="boton-ojo" type="button"class=" btn btn-outline-secondary">
                                 <i id="icono-ojo" class="bi bi-eye"></i>
                             </button>                 
                         </div>
