--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -19,38 +19,43 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 <body>
-
-    <div class="container">
-        <div class="card card-login">
-            <div class="card-header bg-primary text-white">
-                <h3>Ingreso al sistema</h3>
+    <div class="row">
+        <div class="col-6 container parte-izquierda">
+            <div>
+                <h1 class="titulo-h1">¡Bienvenido!</h1>
             </div>
-            <div class="card-body">
-                <form method="post" asp-controller="Login" asp-action="Login">
-                    <div class="form-group">
-                        <label asp-for="Usuario"></label>
-                        <input type="text" asp-for="Usuario" class="form-control" />
-                        <span class="text-danger" asp-validation-for="Usuario"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Password"></label>
-                        <div class="input-group-append">
-                            <input type="password" asp-for="Password" class="form-control" />
-                            <button id="boton-ojo" type="button"class=" btn btn-outline-secondary">
-                                <i id="icono-ojo" class="bi bi-eye"></i>
-                            </button>                 
-                        </div>
-
-                        <span class="text-danger" asp-validation-for="Password"></span>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Ingresar</button>
-                    <div asp-validation-summary="All" class="text-danger mt-3"></div>
-                </form>
+            <div>
+                <h3 class="titulo-h3 mt-5">Ingresa tu Usuario y Contraseña para continuar.</h3>
             </div>
         </div>
+        <div class="container col-6">
+            <div class="card-login">
+                <div class="container">
+                    <form method="post" asp-controller="Login" asp-action="Login">
+                        <div class="form-group">
+                            <label asp-for="Usuario"></label>
+                            <input type="text" asp-for="Usuario" class="form-control" />
+                            <span class="text-danger" asp-validation-for="Usuario"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Password"></label>
+                            <div class="input-group-append">
+                                <input type="password" asp-for="Password" class="form-control" />
+                                <button id="boton-ojo" type="button" class=" btn btn-outline-secondary">
+                                    <i id="icono-ojo" class="bi bi-eye"></i>
+                                </button>
+                            </div>
+
+                            <span class="text-danger" asp-validation-for="Password"></span>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Ingresar</button>
+                        <div asp-validation-summary="All" class="text-danger mt-3"></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
     </div>
-
-
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
