--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Mantenedor de Usuarios</a>
                         </li>
                         <li class="nav-item ml-auto">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Salir class="bi bi-box-arrow-right"</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Salir <i class="bi bi-box-arrow-in-right"></i></a>
                         </li>
                     </ul>
                 </div>
