--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -32,12 +32,12 @@
             <div class="card-login">
                 <div class="container">
                     <form method="post" asp-controller="Login" asp-action="Login">
-                        <div >
+                        <div class="form-group" >
                             <div ><label asp-for="Usuario"></label></div>
                              <input class="form-control" type="text" asp-for="Usuario" />
                             <span class="text-danger" asp-validation-for="Usuario"></span>
                         </div>
-                        <div>
+                        <div class="form-group" >
                             <label asp-for="Password"></label>
                             <div class="input-group-append">
                                 <input class="form-control" type="password" asp-for="Password" />
