--- a/Views/Usuarios/ActualizarUsuario.cshtml
+++ b/Views/Usuarios/ActualizarUsuario.cshtml
@@ -1,23 +1,16 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
 }
-@model UsuarioCreacionModel
-
-<h3>Nuevo Usuario</h3>
+@model UsuarioEdicionModel
+<h3>Actualizar Usuario</h3>
 <hr />
-
-<div class="alert alert-success mt-3" role="alert">
-    * La Contraseña debe tener al menos una mayúscula, minúsculas dígitos y 8 caracteres.
-</div>
 
 <div class="card">
     <div class="card-body">
-        <form action="NuevoUsuario" method="post">
+        <form action="ActualizarUsuario" method="post">
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="NombreUsuario"></label>
-                <input class="form-control" asp-for="NombreUsuario" type="text" />
+                <input class="form-control" asp-for="NombreUsuario" type="text" readonly />
                 <span asp-validation-for="NombreUsuario" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -40,19 +33,10 @@
                 </select>
                 <span asp-validation-for="RolId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input class="form-control" asp-for="Password" type="password" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RePassword"></label>
-                <input class="form-control" asp-for="RePassword" type="password" />
-                <span asp-validation-for="RePassword" class="text-danger"></span>
-            </div>
+
             <a class="btn btn-outline-secondary" asp-action="Index">Cancelar</a>
             <button class="btn btn-outline-success" type="submit">Guardar</button>
-           
+
         </form>
     </div>
 </div>
