--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -79,8 +79,8 @@ body {
     margin-top: 150px;
 }
 .btn-outline-secondary {
-    border: 1px solid #ced4da;
-    background-color: #F6F6F4;
+    border: 1px solid #ced4da !important;
+    background-color: #F6F6F4 !important;
 }
 .btn-outline-secondary:hover {
     background-color: #ededed !important;
@@ -103,7 +103,7 @@ body {
 }
 
 .titulo-h3 {
-    text-align: justify;
+    text-align: center;
     margin-left: 2.5rem;
 }
 
