--- a/Views/Usuarios/CambiarPassword.cshtml
+++ b/Views/Usuarios/CambiarPassword.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    var id = (int)ViewBag.idUsuario;
+    var id = ViewBag.idUsuario;
 }
 @model UsuarioCambioPasswordModel
 <h3>Cambiar Contraseña</h3>
