--- a/Views/Usuarios/NuevoUsuario.cshtml
+++ b/Views/Usuarios/NuevoUsuario.cshtml
@@ -32,11 +32,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="RolId"></label>
-                <select class="form-control" asp-for="RolId">
+                <select class="form-control" asp-for="RolId" asp-items="Model.Roles">
                     <option value="">--Seleccione--</option>
-                    <option value="1">Administrador</option>
-                    <option value="2">Supervisor</option>
-                    <option value="3">Vendedor</option>
                 </select>
                 <span asp-validation-for="RolId" class="text-danger"></span>
             </div>
